add bd with typeORM

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,4 +1,10 @@
 {
-    "type": "slite3",
-    "database": "./src/database/database.sqlite"
+    "type": "sqlite",
+    "database": "./src/database/database.sqlite",
+    "migrations": ["./src/database/migrations/**.ts"],
+    "entities": ["./src/models/**.ts"],
+    "cli": {
+        "migrationsDir": "./src/database/migrations"
+    }
+
 }
