--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
+    "handlebars": "^4.7.7",
+    "nodemailer": "^6.5.0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "typeorm": "^0.2.31",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
@@ -19,6 +22,7 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
+    "@types/nodemailer": "^6.4.0",
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "cross-env": "^7.0.3",
